--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.bookmyflight"
-        minSdk 23
+        minSdk 26
         targetSdk 31
         versionCode 1
         versionName "1.0"
@@ -39,6 +39,7 @@ android {
 
 def nav_version = "2.3.5"
 def roomVersion = '2.3.0'
+def rxJavaVersion = '2.1.1'
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.6.0'
@@ -64,6 +65,15 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.8'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
+
+    //rxJava
+    implementation "io.reactivex.rxjava2:rxjava:$rxJavaVersion"
+    implementation "io.reactivex.rxjava2:rxandroid:$rxJavaVersion"
+
+    //paging3
+    implementation "androidx.paging:paging-runtime:3.1.0-alpha04"
 
     //room
     implementation "androidx.room:room-runtime:$roomVersion"
